unpackaged/main/default/objects/AcctSeed__Automated_Job_Results__c/AcctSeed__Automated_Job_Results__c.object-meta.xml
<CustomObject>
    <description>This object will display the results of all automated jobs from which multiple users can create reports and dashboards.</description>
    <label>Automated Job Result</label>
    <nameField>
        <displayFormat>AJR-{00000}</displayFormat>
        <label>Automated Job Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Job Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>