unpackaged/main/default/objects/AcctSeed__Automated_Job_Results__c/fields/AcctSeed__Notes__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Notes__c</fullName>
    <inlineHelpText>This field will show exception information from the jobs.</inlineHelpText>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>