unpackaged/main/default/objects/AcctSeed__Automated_Job_Results__c/fields/AcctSeed__Schedule_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Schedule_Job_Type__c</fullName>
    <inlineHelpText>List of all the recurring automated jobs that can be created under the Automation tab under Accounting Settings.</inlineHelpText>
    <label>Job Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>