unpackaged/main/default/objects/AcctSeed__Automated_Job_Results__c/fields/AcctSeed__Succeeded__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Succeeded__c</fullName>
    <inlineHelpText>The number of successful records in the job.</inlineHelpText>
    <label>Succeeded</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>